adding authentication to GRPC requests
